# phosphoressence

./: AUTHORS  COPYING  INSTALLGUIDE  Makefile.am  README  aclocal.m4  config.options  config.options.example  configure.ac  index.html
config/: ar.sh
docs/: Phosphor Essence Info Page.pages  PhosphorEssence Priceless App.pages  PhosphorEssence Priceless Equipment.key  mencoder_cmds.txt
papers/: links.txt
scripts/: makeapp.py  milk_to_js.py
src/: AudioEngine.cc  AudioEngine.h  Controller.cc  Controller.h  FFT.cc  FFT.h  GlPreviewWidget.moc.cc  GpuProgram.cc  GpuProgram.h  GraphicsElements.cc  GraphicsEngine.cc  GraphicsEngine.h  JoystickController.cc  JoystickController.h  Kernels.cu  MainWindow.cc  MainWindow.h  Makefile.am  MidiController.cc  MidiController.h  Mycelium.cc  Mycelium.h  OScopeShape.h  OscController.cc  OscController.h  PeParameters.cc  PeParameters.h  PeUtils.h  PhasescopeShape.h  ScriptEngine.cc  ScriptEngine.h  SpectrographShape.h  StandardShaders.h  StandardShaders.pl  Utilities.cc  Utilities.h  VectorShape.h  VideoEngine.cc  VideoEngine.h  pe.cc
src/Contents/Resources/: scripts  shaders
src/OpenFrameworks/: Makefile.am  ofMain.h
src/OpenFrameworks/graphics/: ofTexture.cpp
src/OpenFrameworks/utils/: ofConstants.h
src/StandardScripts/: Bindings.js  Controllers.js  default.js
src/StandardShaders/: backbuffer.glsl  backbuffer_vertex.glsl  blur_x.glsl  frontbuffer.glsl  main.glsl
src/pe/: Graphics.h  Makefile.am  Simulation.h  Video.h  config.h
src/pe/Core/: Cache.cc  Cache.h  CompoundTypes.h  ConfigParser.cc  Debugging.cc  Debugging.h  Exception.cc  Functors.h  Log.h  Makefile.am  Settings.cc  Stopwatch.cc  Thread.cc  Thread.h  Time.cc  Time.h  TypeDeduction.h  VarArray.h
src/pe/Graphics/: BitmapFont.cc  BitmapFont.h  GpuProgram.cc  GpuProgram.h  Makefile.am  StandardShaders.cc  StandardShaders.h  StandardShaders.pl  Texture.cc  Texture.h  Utilities.cc  Utilities.h
src/pe/Math/: BBox.h  Functors.h  Makefile.am  Matrix.h  Vector.h
src/pe/Simulation/: FluidDynamics.cc  FluidDynamics.h  Makefile.am
src/pe/Video/: Makefile.am  QtKitVideoGrabber.m
src/pe/Vision/: Blob.cc  Blob.h  BlobTracker.cc  BlobTracker.h  ContourFinder.cc  ContourFinder.h  Makefile.am
src/pe/core/: Cache.h  ConfigParser.h  Debugging.h  Exception.cc  Exception.h  Features.h  FundamentalTypes.h  Log.cc  Log.h  Makefile.am  Settings.cc  Stopwatch.h  Thread.cc  Time.cc  Time.h
src/pe/core_old/: Settings.h
src/pe/graphics/: Makefile.am  Texture.cc  Texture.h
src/pe/graphics_old/: Texture.h
src/pe/simulation/: FluidDynamics.cc
src/pe/simulation_old/: FluidDynamics.h
src/pe/video/: Makefile.am  QtKitVideoGrabber.h  QtKitVideoGrabber.m
src/pe/video_old/: QtKitVideoGrabber.h
src/presets/milkdrop/: Aderrasi__Spillswirl.js  Bmelgren__Godhead.js  Bmelgren__Pentultimate_Nerual_Slipstream_Tweak_2.js  Bmelgren__Take_This_Highway.js  Bmelgren_and_Krash__Rainbow_Orb_Peacock_Centred_Journey_Mix_2.js  Bmelgren_and_Krash__Rainbow_Orb_Peacock_Lonely_Signal_Gone_Mad_Mix.js  Che__Burning_Hus.js  Che__Escape.js  Che__Geology.js  Che__Watch_and_Fly.js  DaNOnE__Highway_to_Heaven_rotating.js  EMPR__Random__Changing_Polyevolution.js  EMPR__Random__Light_Speed_Racer.js  EMPR__Random__Look_mama,_Im_on_TV_2.js  EMPR__Random__Theyre_so_cute,_Dad_can_I_keep_one.js  EMPR__Random__Turbulence_Sandwich.js  EvilJim__Ice_Drops.js  Fvese__0_To_60.js  Fvese__Lifesavor_Anyone.js  Fvese__Multi_Circle.js  Fvese__Quicksand.js  Fvese__Round_and_Round_geiss_gamma_mix.js  Fvese__The_Tunnel_Final_Stage_Mix.js  Fvese__Zoom_Effects_Remix_2.js  Fvese__simple.js  Geiss & Rovastar - Bytes (quasiresurrected mix).milk  Geiss & Rovastar - Julia Fractal (Vectrip Mix).milk  Geiss & Rovastar - Notions Of Tonality 2.milk  Geiss & Rovastar - Tokamak (Naked Intrusion Mix).milk  Geiss & TobiasWolfBoi - Cataract Slipstream.milk  Geiss - Aieeeeee!!!.milk  Geiss - Anomaly 2.milk  Geiss - Approach.milk  Geiss - Asymptote.milk  Geiss - Bass Kaleidosphere.milk  Geiss - Bass Zoom.milk  Geiss - Bipolar 1.milk  Geiss - Bipolar 2.milk  Geiss - Bipolar 3.milk  Geiss - Bipolar 4.milk  (+671 more)
src/scripts/: Controllers.js  Parameters.js  PresetFunctions.js  Utilities.js  bezier.py  bindings.py  color.py  controllers.py  default.js  graphics.py  hyphae.py  milk_to_pe.py  parameters.py  phosphoressence.py  presets.py
src/scripts/controllers/: JoystickController.py  OscController.py  TuioController.py  hyphae.py
src/scripts/ergo/: .ergo.py.swp  ergo.py  func.py  path.py  splines.py  sprite.py  util.py
src/scripts/hyphae/: hyphae.py  mycelium.py
src/scripts/shapes/: aimless_bit.py  bezier.py  bezierchaos.py  border.py  earthquakesprite.py  polybouncer.py  polygon.py  polysynth.py  random_walk.py  test.py  vectorbrush.py  vg_sprite.py  vu_spirals.py  wheelsprite.py
src/shaders/: backbuffer.glsl  backbuffer_vertex.glsl  frontbuffer.glsl  ground.glsl  hyphaebuffer.glsl  rd.glsl
